# abyssal-embodied-benchmark

./: .gitignore  .npmrc  README.md  package-lock.json  package.json
python/benchmark/: pyproject.toml  requirements.txt
python/benchmark/scripts/: check_submission_adapter.py  demo_train_and_benchmark.sh  demo_web_artifacts.sh  eval_policy.py  evaluate_submission.py  export_replay.py  gen_sample_data.py  generate_contract_test_replay.py  publish_submission.py  run_benchmark.py  smoke_end_to_end.sh  smoke_env.py  train_cautious_ppo.py  train_ppo.py  tune_degradation.py  validate_submission_bundle.py  validate_submission_metadata.py  validate_world_spec.py
python/benchmark/src/abyssal_benchmark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/benchmark/src/abyssal_benchmark/agents/: __init__.py  base.py  cautious_agent.py  heuristic_agent.py  ppo_agent.py  random_agent.py
python/benchmark/src/abyssal_benchmark/envs/: __init__.py  degradation.py  make_env.py  navigation_env.py  world_gen.py
python/benchmark/src/abyssal_benchmark/eval/: __init__.py  benchmark_runner.py  evaluate_policy.py  replay_export.py
python/benchmark/src/abyssal_benchmark/schemas/: __init__.py  leaderboard.py  replay_schema.py  submission_metadata.py  world_spec.py
python/benchmark/src/abyssal_benchmark/utils/: __init__.py  config.py  (+3 more)
python/benchmark/tests/: test_benchmark_runner.py  test_imports.py  test_navigation_env.py  test_replay_export.py  test_replay_schema.py  test_submission_loader.py  test_submission_schemas.py  test_world_gen.py  test_world_spec_schema.py
(+129 files in other folders)
